# eth-wallet

./: .gitignore  CHANGELOG.md  LICENSE  README.md  release-conf.yaml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
doc/imgs/: BIP39.drawio  architecture .drawio  hd-wallet-scheme.drawio
eth_wallet/: account.py  api.py  configuration.py  contract.py  exceptions.py  infura.py  keys.py  transaction.py  utils.py  wallet.py
eth_wallet/cli/: add_token.py  eth_wallet_cli.py  get_account.py  get_balance.py  get_wallet.py  list_tokens.py  network.py  new_account.py  new_wallet.py  restore_wallet.py  reveal_private_key.py  reveal_seed.py  send_transaction.py  utils_cli.py
eth_wallet/ui/: gui.py  home_page.py  new_wallet.py  page.py  wallet_gui.py
tests/: cli_tester.py  conftest.py
tests/integration/: test_add_token.py  test_cli.py  test_get_balance.py  test_get_wallet.py  test_send_transaction.py
tests/unit/: test_account.py  test_api.py  test_cli.py  test_utils.py
