[metadata]
name = eth-wallet
url = https://github.com/marusinm/eth-wallet
description = Ethereum wallet
long_description = file: README.md
author = Marek Marusin
author_email = marusin.marek@gmail.com
keywords =
    ethereum
    wallet
    cryptocurrencies


[options]
packages = find:
python_requires = >=3.6
include_package_data = True

setup_requires =
    setuptools_scm
    setuptools_scm_git_archive

install_requires =
    Click
    web3
    eth-account
    eth-keys
    PyYAML
    mnemonic

[options.extras_require]
testing =
    pytest

[options.entry_points]
console_scripts =
    eth-wallet=eth_wallet.cli.eth_wallet_cli:eth_wallet_cli