[metadata]
name = eth-wallet
url = https://github.com/marusinm/eth-wallet
description = Ethereum wallet
long_description = file: README.md
author = Marek Marusin
author_email = marusin.marek@gmail.com
keywords =
    ethereum
    wallet
    cryptocurrencies


[options]
packages = find:
python_requires = >=3.6
include_package_data = True

setup_requires =
    setuptools_scm
    setuptools_scm_git_archive

install_requires =
    Click==7.0
    web3==4.9.1
    eth-account==0.3.0
    eth-keys==0.2.1
    PyYAML==5.1
    mnemonic==0.18


[options.extras_require]
testing =
    pytest

[options.entry_points]
console_scripts =
    eth-wallet=eth_wallet.cli.eth_wallet_cli:eth_wallet_cli